--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="header">
-        <h1>Easy Eats</h1>
+        <h2 class="slogan">A FOME APERTOU?</h2>
+        <img src="/img/Logo 1.png" alt="logo principal" class="logo">
+        <h2 class="slogan">BROTOU</h2>
     </div>
 
     <div class="loader">
@@ -18,15 +20,20 @@
     </div>
 
     <div class="carte">
-        <div class="carte-sign">5M1</div>
-        <div class="carte-sign">5M1</div>
-        <div class="carte-sign">5M1</div>
-        <div class="carte-sign">5M1</div>
-        <div class="carte-sign">5M1</div>
+        <div class="main-carte">
+            <div class="main-carte-sign">SALAS PARTICIPANTES</div>
+        </div>
+
+        <div class="bot-carte">
+            <div class="carte-sign">4M1</div>
+            <div class="carte-sign">4M2</div>
+            <div class="carte-sign">4M3</div>
+        </div>
     </div>
 
     <div class="carte-acess">
-        <h1>Faça seu pedido aqui</h1>
+        <h2>ESCOLHA VOCÊ MESMO</h2>
+        <h3>FAÇA SEU PEDIDO CLICANDO AO LADO</h3>
     </div>
 </body>
 </html>
