--- a/cardapio.html
+++ b/cardapio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,75 +9,103 @@
     <style>
         body{
             background-color: #f7a204;
+        }
+        
+        * {
             padding: 0;
             margin: 0;
         }
-        .carte{
-    grid-area: carte;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-}
- 
-.bot-carte{
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
-    align-self: flex-end;
-    background: #eae2b7;
-}
 
-.carte-sign{
-    width: 120px;
-    height: 70px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    background: #eae2b7;
-    color: #f7a204;
-    font-size: 35px;
-}
-.carte-sign:nth-child(2){
-    border-left: 4px solid #f77f00;
-    border-right: 4px solid #f77f00;
-}
+        .carte {
+            grid-area: carte;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+        }
 
-.main-carte-sign{
-    transform: translate(0, 6px);
-    text-align: center;
-    width: 270px;
-    padding: 5px 10px; 
-    color: #f7a204;
-    border: 4px solid #f7a204;
-    background: #eae2b7;  
-    grid-area: mainCarte;
-    font-size: 20px;
-    border-radius: 10px; 
-}
-.presentation{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    background-color: #003049;
-    width: 100%;
-    height: 100px;
-    border-bottom: 8px solid #d62828;
-}
-.logo{
-    width: 100px;
-    height: 100px;
-}
-.title{
-    color: #f7a204;
-    font-size: 45px;
-}
+        .bot-carte {
+            width: 100%;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            align-items: center;
+            align-self: flex-end;
+            background: #eae2b7;
+        }
+
+        .carte-sign {
+            width: 120px;
+            height: 70px;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+            background: #eae2b7;
+            color: #f7a204;
+            font-size: 35px;
+        }
+
+        .carte-sign:nth-child(2) {
+            border-left: 4px solid #f77f00;
+            border-right: 4px solid #f77f00;
+        }
+
+        .main-carte-sign {
+            transform: translate(0, 6px);
+            text-align: center;
+            width: 270px;
+            padding: 5px 10px;
+            color: #f7a204;
+            border: 4px solid #f7a204;
+            background: #eae2b7;
+            grid-area: mainCarte;
+            font-size: 20px;
+            border-radius: 10px;
+        }
+
+        .presentation {
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+            background-color: #003049;
+            width: 100%;
+            height: 100px;
+            border-bottom: 8px solid #d62828;
+        }
+
+        .logo {
+            width: 100px;
+            height: 100px;
+        }
+
+        .title {
+            color: #f7a204;
+            font-size: 45px;
+        }
+
+        .order{
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: space-around;
+            background-color: rgba(151, 151, 151, .8);
+            width: 350px;
+            height: 120px;
+
+        }
+        .hashtag{
+            width: 35px;
+            height: 35px;
+            font-size: 15px;
+            color: #eae2b7;
+            background-color: #000;
+            border-radius: 30px;
+        }
     </style>
 </head>
+
 <body>
     <div class="presentation">
         <img src="/img/Logo 2.png" alt="logo easy eats" class="logo">
@@ -94,5 +123,15 @@
             <div class="carte-sign">4M3</div>
         </div>
     </div>
+
+    <div class="orders">
+        <div class="order">
+            <div class="hashtag">#4m1</div>
+            <h4>Name of product</h4>
+            <p class="information">This is a nutricion something about this product</p>
+            <p class="price">R$ 40,00</p>
+        </div>
+    </div>
 </body>
+
 </html>
