--- a/cardapio.html
+++ b/cardapio.html
@@ -108,7 +108,7 @@
 
 <body>
     <div class="presentation">
-        <img src="/img/Logo 2.png" alt="logo easy eats" class="logo">
+        <img href="img/logo1.png" alt="logo easy eats" class="logo">
         <h2 class="title">Cardápio</h2>
     </div>
 
