--- a/cardapio.html
+++ b/cardapio.html
@@ -9,6 +9,18 @@
     <style>
         body{
             background-color: #f7a204;
+            display: grid;
+            grid-template-rows: 20% 20% 1fr;
+            grid-template-areas: 1fr 1fr 1fr;
+            grid-template-areas: 
+                "presentation presentation presentation"
+                "carte carte carte"
+                "orders orders orders"
+                ;
+        }
+
+        a{
+            text-decoration: none;   
         }
         
         * {
@@ -31,8 +43,11 @@
             justify-content: space-around;
             align-items: center;
             align-self: flex-end;
-            background: #eae2b7;
         }
+
+        .bot-carte a:nth-child(2){
+            border-right: 3px solid #003049;
+}
 
         .carte-sign {
             width: 120px;
@@ -44,11 +59,6 @@
             background: #eae2b7;
             color: #f7a204;
             font-size: 35px;
-        }
-
-        .carte-sign:nth-child(2) {
-            border-left: 4px solid #f77f00;
-            border-right: 4px solid #f77f00;
         }
 
         .main-carte-sign {
@@ -65,6 +75,7 @@
         }
 
         .presentation {
+            grid-area: presentation;
             display: flex;
             flex-flow: row nowrap;
             justify-content: center;
@@ -103,6 +114,9 @@
             background-color: #000;
             border-radius: 30px;
         }
+        .orders{
+            grid-area: orders;
+        }
     </style>
 </head>
 
@@ -118,13 +132,27 @@
         </div>
 
         <div class="bot-carte">
-            <div class="carte-sign">4M1</div>
-            <div class="carte-sign">4M2</div>
-            <div class="carte-sign">4M3</div>
+            <a href=""><div class="carte-sign">4M1</div></a>
+            <a href=""><div class="carte-sign">4M2</div></a>
+            <a href=""><div class="carte-sign">4M3</div></a>
         </div>
     </div>
 
     <div class="orders">
+        <div class="order">
+            <div class="hashtag">#4m1</div>
+            <h4>Name of product</h4>
+            <p class="information">This is a nutricion something about this product</p>
+            <p class="price">R$ 40,00</p>
+        </div>
+
+        <div class="order">
+            <div class="hashtag">#4m1</div>
+            <h4>Name of product</h4>
+            <p class="information">This is a nutricion something about this product</p>
+            <p class="price">R$ 40,00</p>
+        </div>
+
         <div class="order">
             <div class="hashtag">#4m1</div>
             <h4>Name of product</h4>
