alterações no cardapio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h2 class="slogan">A FOME APERTOU?</h2>
-        <img src="/img/Logo 1.png" alt="logo principal" class="logo">
+        <img src="/img/logo1.png" alt="logo principal" class="logo">
         <h2 class="slogan">BROTOU</h2>
     </div>
 
@@ -25,15 +25,20 @@
         </div>
 
         <div class="bot-carte">
-            <div class="carte-sign">4M1</div>
-            <div class="carte-sign">4M2</div>
-            <div class="carte-sign">4M3</div>
+            <a href="" class="carte-sign">4M1</a>
+            <a href="" class="carte-sign">4M2</a>
+            <a href="" class="carte-sign">4M3</a>
         </div>
     </div>
-
+    
     <div class="carte-acess">
-        <h2>ESCOLHA VOCÊ MESMO</h2>
-        <h3>FAÇA SEU PEDIDO CLICANDO AO LADO</h3>
+        
     </div>
+
+        <a href=""><img src="img/pedido.png" alt="faça seu pedido" class="pedido"></a>
+
+        <div class="footer">
+            <h2>Um patrocínio de Gráfica ON&copy;</h2>
+        </div>
 </body>
 </html>
