--- a/cardapio.html
+++ b/cardapio.html
@@ -7,25 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cardápio</title>
     <style>
-        body{
-            background-color: #f7a204;
+        body {
             display: grid;
-            grid-template-rows: 20% 20% 1fr;
+            background-color: #f7a204;
+            grid-template-rows: 10% 1fr;
             grid-template-areas: 1fr 1fr 1fr;
-            grid-template-areas: 
+            grid-template-areas:
                 "presentation presentation presentation"
                 "carte carte carte"
                 "orders orders orders"
-                ;
+            ;
+            
         }
 
-        a{
-            text-decoration: none;   
+        a {
+            text-decoration: none;
         }
-        
+
         * {
             padding: 0;
             margin: 0;
+            box-sizing: border-box;
         }
 
         .carte {
@@ -34,31 +36,6 @@
             flex-flow: column nowrap;
             justify-content: center;
             align-items: center;
-        }
-
-        .bot-carte {
-            width: 100%;
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: space-around;
-            align-items: center;
-            align-self: flex-end;
-        }
-
-        .bot-carte a:nth-child(2){
-            border-right: 3px solid #003049;
-}
-
-        .carte-sign {
-            width: 120px;
-            height: 70px;
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: center;
-            align-items: center;
-            background: #eae2b7;
-            color: #f7a204;
-            font-size: 35px;
         }
 
         .main-carte-sign {
@@ -78,7 +55,7 @@
             grid-area: presentation;
             display: flex;
             flex-flow: row nowrap;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
             background-color: #003049;
             width: 100%;
@@ -96,69 +73,93 @@
             font-size: 45px;
         }
 
-        .order{
+        .order {
             display: flex;
             flex-flow: column nowrap;
             justify-content: center;
-            align-items: space-around;
+            align-items: center;
             background-color: rgba(151, 151, 151, .8);
-            width: 350px;
-            height: 120px;
-
+            margin: 10px 0;
+            padding: 10px;
+            width: 400px;
+            height: auto;
         }
-        .hashtag{
-            width: 35px;
-            height: 35px;
+
+        .order div, h2, p, button{
+            margin: 3px;
+        }
+
+        .order div{
+            font-size: 18px;
+        }
+
+        .hashtag {
+            display: flex;
+            width: 45px;
+            height: 45px;
             font-size: 15px;
             color: #eae2b7;
             background-color: #000;
             border-radius: 30px;
+            justify-content: center;
+            align-items: center; 
         }
-        .orders{
+
+        .orders {
+            display: flex;
+            flex-flow: nowrap column;
+            justify-content: center;
+            align-items: center;
             grid-area: orders;
         }
+
+        .peca-pedido{
+            width: 60px;
+            height: 30px;
+        }
+
     </style>
 </head>
 
 <body>
     <div class="presentation">
-        <img href="img/logo1.png" alt="logo easy eats" class="logo">
+        <img src="img/logo1.png" alt="logo easy eats" class="logo">
         <h2 class="title">Cardápio</h2>
-    </div>
-
-    <div class="carte">
-        <div class="main-carte">
-            <div class="main-carte-sign">SALAS PARTICIPANTES</div>
-        </div>
-
-        <div class="bot-carte">
-            <a href=""><div class="carte-sign">4M1</div></a>
-            <a href=""><div class="carte-sign">4M2</div></a>
-            <a href=""><div class="carte-sign">4M3</div></a>
-        </div>
     </div>
 
     <div class="orders">
         <div class="order">
             <div class="hashtag">#4m1</div>
-            <h4>Name of product</h4>
-            <p class="information">This is a nutricion something about this product</p>
-            <p class="price">R$ 40,00</p>
+            <h2>Empada de camarão</h2>
+            <p class="information">Farinha de trigo, camarão, creme de leite, sal</p>
+            <p class="price">R$ 4,50</p>
+            <button class="peca-pedido">Peça!</button>
         </div>
 
         <div class="order">
             <div class="hashtag">#4m1</div>
-            <h4>Name of product</h4>
+            <h2>Name of product</h2>
             <p class="information">This is a nutricion something about this product</p>
             <p class="price">R$ 40,00</p>
+            <button class="peca-pedido">Peça!</button>
         </div>
 
         <div class="order">
             <div class="hashtag">#4m1</div>
-            <h4>Name of product</h4>
+            <h2>Name of product</h2>
             <p class="information">This is a nutricion something about this product</p>
             <p class="price">R$ 40,00</p>
+            <button class="peca-pedido">Peça!</button>
         </div>
+
+        <div class="order">
+                <div class="hashtag">#4m1</div>
+                <h2>Empada de camarão</h2>
+                <p class="information">Farinha de trigo, camarão, creme de leite, sal</p>
+                <p class="price">R$ 4,50</p>
+                <button class="peca-pedido">Peça!</button>
+            </div> 
+
     </div>
 </body>
 
