alterações no login e organização de pastas

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/assets/stylesheet/index.css">
     <title>Easy Eats</title>
 </head>
 <body>
     <div class="header">
         <h2 class="slogan">A FOME APERTOU?</h2>
-        <img src="/img/logo1.png" alt="logo principal" class="logo">
+        <img src="/assets/img/logo1.png" alt="logo principal" class="logo">
         <h2 class="slogan">BROTOU</h2>
     </div>
 
@@ -35,7 +35,7 @@
         
     </div>
 
-        <a href=""><img src="img/pedido.png" alt="faça seu pedido" class="pedido"></a>
+        <a href=""><img src="/assets/img/pedido.png" alt="faça seu pedido" class="pedido"></a>
 
         <div class="footer">
             <h2>Um patrocínio de Gráfica ON&copy;</h2>
