--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -9,16 +9,19 @@
     <title>Easy Food - Cadastro</title>
 </head>
 
-<body class="fundo">
-    <div>
-        <div class="formulario">
+<body>
+    <div class="container">
+    <img src="/assets/img/logo2.png" alt="logo do Easy Eats" class="logo">
+
+        <div class="formum">
             <input type="email" class="campo" placeholder="Digite seu melhor e-mail">
             <input type="text" class="campo" placeholder="Digite seu nome">
             <input type="password" class="campo" placeholder="Digite sua senha">
             <input type="password" class="campo" placeholder="Confirme sua senha">
             <input type="tel" class="campo" placeholder="Digite seu telefone">
-
-            <select id="select-menu">
+        </div>
+        
+        <select id="select-menu">
                 <option value="4M3">4M3</option>
                 <option value="4M2">4M2</option>
                 <option value="4M1">4M1</option>
@@ -28,7 +31,6 @@
                 <option value="2M2">2M2</option>
                 <option value="2M1">2M1</option>
             </select>
-        </div>
     </div>
 </body>
 
