--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,7 +21,7 @@
             <input type="tel" class="campo" placeholder="Digite seu telefone">
         </div>
         
-        <select id="select-menu">
+        <select class="select-menu">
                 <option value="4M3">4M3</option>
                 <option value="4M2">4M2</option>
                 <option value="4M1">4M1</option>
