--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -32,6 +32,8 @@
                 <option value="2M1">2M1</option>
             </select>
     </div>
+
+    <button class="btn-login">CADASTRAR</button>
 </body>
 
 </html>
