mexendo na index

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <h2 class="slogan">A FOME APERTOU?</h2>
         <img src="/assets/img/logo1.png" alt="logo principal" class="logo">
-        <h2 class="slogan">BROTOU</h2>
+        <div></div>
     </div>
 
     <div class="loader">
@@ -38,7 +37,6 @@
         <a href=""><img src="/assets/img/pedido.png" alt="faça seu pedido" class="pedido"></a>
 
         <div class="footer">
-            <h2>Um patrocínio de Gráfica ON&copy;</h2>
         </div>
 </body>
 </html>
