colocando a opção para o login

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -34,6 +34,8 @@
     </div>
 
     <button class="btn-login">CADASTRAR</button>
+
+    <p class="register">Já possui um acesso? <a href="/pages/cadastro.html">Entre agora</a></p>
 </body>
 
 </html>
