--- a/pages/login.html
+++ b/pages/login.html
@@ -25,7 +25,7 @@
   
   <button class="btn-login">LOGIN</button>
 
-  <p class="register">não possui um acesso? <a href="/pages/cadastro.html">Cadastre-se</a></p>
+  <p class="register">Não possui um acesso? <a href="/pages/cadastro.html">Cadastre-se</a></p>
 </body>
 
 </html>
