--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/assets/stylesheet/index.css">
+    <link rel="shortcut icon" href="/assets/img/easy.ico">
     <title>Easy Eats</title>
 </head>
 <body>
