--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="/assets/img/easy.ico">
   <link rel="stylesheet" href="/assets/stylesheet/login.css">
   <title>Easy Food - Login</title>
 </head>
