--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cardápio</title>
+    <link rel="shortcut icon" href="/assets/img/easy.ico">
+    <title>Easy Eats - Cardápio</title>
     <link rel="stylesheet" href="/assets/stylesheet/menu.css">
 </head>
 
@@ -14,39 +15,29 @@
         <img src="/assets/img/logo1.png" alt="logo easy eats" class="logo">
         <h2 class="title">Cardápio</h2>
     </div>
+    <div class="carte">
+
+        <div class="bot-carte">
+
+            <a href="">
+                <div  class="carte-sign">Cantinho do Nordeste</div>
+            </a>
+            <a href="">
+                <div class="carte-sign">Outro Sabor</div>
+            </a>
+            <a href="">
+                <div class="carte-sign">Pizzaritos</div>
+            </a>
+            <a href="">
+                <div class="carte-sign">Tropicaliente</div>
+            </a>
+            <a href="">
+                <div class="carte-sign">Me Gusta Brownie</div>
+            </a>
+        </div>
+    </div>
 
     <div class="orders">
-        <div class="order">
-            <div class="hashtag">#4m1</div>
-            <h2>Empada de camarão</h2>
-            <p class="information">Farinha de trigo, camarão, creme de leite, sal</p>
-            <p class="price">R$ 4,50</p>
-            <button class="peca-pedido">Peça!</button>
-        </div>
-
-        <div class="order">
-            <div class="hashtag">#4m1</div>
-            <h2>Name of product</h2>
-            <p class="information">This is a nutricion something about this product</p>
-            <p class="price">R$ 40,00</p>
-            <button class="peca-pedido">Peça!</button>
-        </div>
-
-        <div class="order">
-            <div class="hashtag">#4m1</div>
-            <h2>Name of product</h2>
-            <p class="information">This is a nutricion something about this product</p>
-            <p class="price">R$ 40,00</p>
-            <button class="peca-pedido">Peça!</button>
-        </div>
-
-        <div class="order">
-                <div class="hashtag">#4m1</div>
-                <h2>Empada de camarão</h2>
-                <p class="information">Farinha de trigo, camarão, creme de leite, sal</p>
-                <p class="price">R$ 4,50</p>
-                <button class="peca-pedido">Peça!</button>
-            </div> 
 
     </div>
 </body>
